<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/ScrollView01"
android:layout_width="fill_parent"
android:layout_height="fill_parent" 
android:background="@drawable/background_activities_sub">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="580dp"
    android:background="@drawable/background_activities">

    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/headline"
        android:textColor="@color/text_color_black"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="31dp"
        android:text="@string/steuerjahr"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_color_black" />

    <EditText
        android:id="@+id/etSteuerJahr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_marginRight="10dp"
        android:layout_toRightOf="@+id/textView2"
        android:ems="10"
        android:inputType="number" >

    </EditText>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="50dp"
        android:text="@string/personenkreis2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_color_black" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="30dp"
        android:text="@string/unterlagen2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_color_black" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="10dp"
        android:text="@string/personenkreis"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/text_color_black" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="10dp"
        android:text="@string/unterlagen"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/text_color_black" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignRight="@+id/textView3"
        android:layout_below="@+id/textView8"
        android:layout_marginTop="5dp"
        android:text="@string/hinweis3"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/text_color_black" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="30dp"
        android:text="@string/hinweis"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_color_black" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView9"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="13dp"
        android:text="@string/hinweis2"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/text_color_black" />

    <Button
        android:id="@+id/btnGoToGehaltsschein"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignTop="@+id/textView9"
        android:layout_marginTop="-15dp"
        android:background="@drawable/background_button_white"
        android:gravity="center"
        android:text="@string/button_weiter"
        android:textColor="@color/text_color_white" />
    
	</RelativeLayout>
</ScrollView>